--- a/access.html
+++ b/access.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>アクセス｜フラワーアレンジメント教室 Bloom</title>
+<title>アクセス｜フラワーアレンジメント教室 Bloomaaa</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
